--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 Factify. Built by K Anantha Krishna Rao, AIML Learner.</p>
+        <p>&copy; 2025 Factify. A Team Project.</p>
     </footer>
 </body>
 </html>
